# mathhub

./: .gitignore  AGENTS.md  PROJECT_PLAN.md  TASK.md  docker-compose.yml  package.json  pnpm-lock.yaml
apps/api/: .env.example  alembic.ini  pyproject.toml  requirements.txt
apps/api/app/: config.py  db.py  main.py
apps/api/app/routers/: __init__.py  ocr_jobs.py  problems.py  storage.py
apps/api/app/schemas/: ocr_jobs.py  problems.py  storage.py
apps/api/app/services/: __init__.py  ai_classifier.py  gemini_document_scanner.py  mathpix_client.py  problem_asset_extractor.py  s3_storage.py
apps/api/db/: README.md  schema.sql  seed_csat_2027_math.sql
apps/api/migrations/: env.py
apps/api/migrations/versions/: d23823e2de6d_baseline_schema.py
apps/api/tests/: test_ai_classifier_asset_hints.py  test_config.py  test_gemini_document_scanner.py  test_mathpix_client.py  test_ocr_jobs_text_policy.py  test_problem_asset_extractor.py
apps/web/: package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/jobs/: page.tsx
apps/web/src/app/problems/: page.tsx
apps/web/src/app/review/: page.tsx
apps/web/src/app/upload/: page.tsx
apps/web/src/components/: problem-statement-view.tsx
apps/web/src/components/layout/: AppShell.tsx  Sidebar.tsx  TopBar.tsx
apps/web/src/lib/: api.ts
apps/web/src/mocks/: data.ts
apps/web/src/theme/: ThemeRegistry.tsx  theme.ts
